Boss can not be implemented without coupling